--- a/Lecture_04_ControlFlow/Lecture_04_ControlFlow.html
+++ b/Lecture_04_ControlFlow/Lecture_04_ControlFlow.html
@@ -121,7 +121,7 @@ if x > 0:
     print("x is a positive number")
 ```
 
-<img src="./if.png" width="50%" style="display: block; margin: 0 auto;"/>
+<img src="./images/if.png" width="50%" style="display: block; margin: 0 auto;"/>
 
 <!--v-->
 
@@ -159,7 +159,7 @@ else:
     print("x is not a positive number")
 ```
 
-<img src="./if_else.png" width="80%" style="display: block; margin: 0 auto;"/>
+<img src="./images/if_else.png" width="80%" style="display: block; margin: 0 auto;"/>
 
 <!--v-->
 
@@ -243,7 +243,7 @@ elif x == 0:
 
 - `if`、`elif` 和 `else` 主体中的所有语句也可以是条件语句，他们可以层层叠加，组成非常复杂的 `if` 网络（但是千万不要在实践中这么做！！！）
 
-<img src="./image.png" width="70%" style="display: block; margin: 0 auto;"/>
+<img src="./images/image.png" width="70%" style="display: block; margin: 0 auto;"/>
 
 <!--v-->
 
@@ -267,7 +267,7 @@ else:
 ```
 
 
-<img src="./image-4.png" width="100%" style="display: block; margin: 0 auto;"/>
+<img src="./images/image-4.png" width="100%" style="display: block; margin: 0 auto;"/>
 
 </div>
 
@@ -314,7 +314,7 @@ else:
 
 - 【2024 四川内江高三一模】如图是一个电子元件在处理数据时的流程图：
 
-<img src="./image-10.png" width="70%" style="display: block; margin: 0 auto;"/>
+<img src="./images/image-10.png" width="70%" style="display: block; margin: 0 auto;"/>
 
 ```py []
 def f(x):
@@ -434,52 +434,6 @@ set2 = set([4, 5, 6, 7])      # 使用 set() 函数从列表创建集合
 
 <!--v-->
 
-## 字典 (Dict)
-
-* 字典的每个键值 **`key:value`** 用冒号 `:` 分割，每个键值对之间用逗号 `,` 分割，整个字典包括在花括号 `{}` 中 ,格式如下所示：
-* 就像我们查《新华字典》，字就是 `key`，字的释义就是 `value`
-
-```python
-d = {key1 : value1, key2 : value2 }
-```
-
-* 键一般是唯一的、不可变的，如果重复最后的一个键值对会替换前面的，值不需要唯一。
-
-```python
-tinydict = {'Alice': '2341', 'Beth': '9102', 'Cecil': '3258'}
-```
-
-* 其中``Alice,Beth,Cecil``是``key``，``2341,9102,3258``是``value``,
-形如``Alice:2341``的我们称之为**键值对** (key-value pairs)
-
-<!--v-->
-
-## Dict（字典）
-
-* construct(构造): di = {'a': 1, 'b': 2, 'b': '3'}
-
-* visit(访问): print(di[‘a’])
-
-* change(改变): di[‘a’] = 100
-
-* delete(删除): del di[‘a’]
-
-**Attention：对dict几乎所有的操作都是通过键来实现的**
-
-<!--v-->
-
-## Example
-
-```python
->>> tinydict = {'a': 1, 'b': 2, 'b': '3'}
->>> tinydict['b']
-'3'
->>> tinydict
-{'a': 1, 'b': '3'}
-```
-
-<!--v-->
-
 ## 区分python中的四种集合数据类型
 
 ### （列表，元组，集合，字典）
@@ -490,7 +444,7 @@ tinydict = {'Alice': '2341', 'Beth': '9102', 'Cecil': '3258'}
 
 3. 集合（set）：无序，无索引，没有重复的成员。
 
-4. 字典 （Dictionary）：无序，可更改，有索引，没有重复的成员
+4. 字典 （Dictionary）：无序，可更改，有索引，没有重复的成员(见末尾)
 
 <!--s-->
 
@@ -816,6 +770,65 @@ print(is_prime)
 <!--s-->
 
 ## Takeaway Message
+
+<!--s-->
+
+Thanks for listening
+
+<!--v-->
+
+# ??. 附加部分
+
+由于不确定因为各种原因是否有充足的时间，这一部分不一定会在上课中讲到～
+
+但是我们会在 Slides 和 Notebook 中正常提供，供大家自行阅读～
+
+<!--s-->
+
+## 字典 (Dict)
+
+* 字典的每个键值 **`key:value`** 用冒号 `:` 分割，每个键值对之间用逗号 `,` 分割，整个字典包括在花括号 `{}` 中 ,格式如下所示：
+* 就像我们查《新华字典》，字就是 `key`，字的释义就是 `value`
+
+```python
+d = {key1 : value1, key2 : value2 }
+```
+
+* 键一般是唯一的、不可变的，如果重复最后的一个键值对会替换前面的，值不需要唯一。
+
+```python
+tinydict = {'Alice': '2341', 'Beth': '9102', 'Cecil': '3258'}
+```
+
+* 其中``Alice,Beth,Cecil``是``key``，``2341,9102,3258``是``value``,
+形如``Alice:2341``的我们称之为**键值对** (key-value pairs)
+
+<!--v-->
+
+## 字典 (Dict) (cont'd)
+
+* construct(构造): di = {'a': 1, 'b': 2, 'b': '3'}
+
+* visit(访问): print(di[‘a’])
+
+* change(改变): di[‘a’] = 100
+
+* delete(删除): del di[‘a’]
+
+**Attention：对dict几乎所有的操作都是通过键来实现的**
+
+<!--v-->
+
+## Example
+
+```python
+>>> tinydict = {'a': 1, 'b': 2, 'b': '3'}
+>>> tinydict['b']
+'3'
+>>> tinydict
+{'a': 1, 'b': '3'}
+```
+
           </textarea>
         </section>
       </div>
