--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 - [Lecture_03_Function](./Lecture_03_Function)
 - [Lecture_04_Control_Flow](./Lecture_04_Control_Flow)
 - [Lecture_05_How_To_Use_Python](./Lecture_05_How_To_Use_Python)
+- [Lecture_06_AI_Introduction](./Lecture_06_AI_Introduction)
 - [Lecture_i_Basic_Knowledge](./Lecture_i_Basic_Knowledge)
 
           </textarea>
