--- a/Lecture_07_AI_Introduction/Lecture_07_AI_Introduction.html
+++ b/Lecture_07_AI_Introduction/Lecture_07_AI_Introduction.html
@@ -104,7 +104,7 @@
 
 ## Chatbot 的发展：微软小冰
 
-<img src="images/xiaoice.jjpg" width="85%" style="display: block; margin: 0 auto;">
+<img src="images/xiaoice.jpg" width="85%" style="display: block; margin: 0 auto;">
 
 <!--v-->
 
