--- a/index.html
+++ b/index.html
@@ -30,6 +30,17 @@
 - [Lecture_07_AI_Introduction](./Lecture_07_AI_Introduction)
 - [Lecture_i_Basic_Knowledge](./Lecture_i_Basic_Knowledge)
 
+---
+## SI 100+ Notebook 页
+- [Exercise_01.ipynb](https://nbviewer.org/github/teafrogsf/SI100Plus/blob/main/Exercises/Exercise_01.ipynb)
+- [Exercise_02.ipynb](https://nbviewer.org/github/teafrogsf/SI100Plus/blob/main/Exercises/Exercise_02.ipynb)
+- [Lecture_00_Environment.ipynb](https://nbviewer.org/github/teafrogsf/SI100Plus/blob/main/Lecture_00_Environment/Lecture_00_Environment.ipynb)
+- [Lecture_02_Python_Intro.ipynb](https://nbviewer.org/github/teafrogsf/SI100Plus/blob/main/Lecture_02_Python_Intro/Lecture_02_Python_Intro.ipynb)
+- [Lecture_03_Var_Operator_Expr.ipynb](https://nbviewer.org/github/teafrogsf/SI100Plus/blob/main/Lecture_03_Var_Operator_Expr/Lecture_03_Var_Operator_Expr.ipynb)
+- [Lecture_04_Function.ipynb](https://nbviewer.org/github/teafrogsf/SI100Plus/blob/main/Lecture_04_Function/Lecture_04_Function.ipynb)
+- [Lecture_05_Control_Flow.ipynb](https://nbviewer.org/github/teafrogsf/SI100Plus/blob/main/Lecture_05_Control_Flow/Lecture_05_Control_Flow.ipynb)
+- [Lecture_06_How_To_Use_Python.ipynb](https://nbviewer.org/github/teafrogsf/SI100Plus/blob/main/Lecture_06_How_To_Use_Python/Lecture_06_How_To_Use_Python.ipynb)
+
           </textarea>
         </section>
       </div>
