--- a/Lecture_03_Var_Operator_Expr/Lecture_03_Var_Operator_Expr.html
+++ b/Lecture_03_Var_Operator_Expr/Lecture_03_Var_Operator_Expr.html
@@ -918,7 +918,10 @@ Python 的布尔运算符就能够这样“偷懒”。
       const mermaidOptions = extend({ startOnLoad: false }, {});
       mermaid.startOnLoad = false;
       mermaid.initialize(mermaidOptions);
-      const cb = function (event) { mermaid.init(mermaidOptions, '.stack.present>.present pre code.mermaid'); };
+      const cb = function (event) {
+        mermaid.init(mermaidOptions, '.stack.present > .present pre code.mermaid');
+        mermaid.init(mermaidOptions, '.slides > .present:not(.stack) pre code.mermaid');
+      }
       Reveal.addEventListener('ready', cb);
       Reveal.addEventListener('slidetransitionend', cb);
     </script>
